feat: comprehensive professional overhaul of jupyterlite environment

--- a/jupyter_lite_config.json
+++ b/jupyter_lite_config.json
@@ -1,5 +1,18 @@
 {
     "LiteBuildConfig": {
-        "base_url": "/"
+        "base_url": "/",
+        "apps": {
+            "lab": {
+                "pre_install": [
+                    "pandas",
+                    "matplotlib",
+                    "numpy",
+                    "scipy"
+                ]
+            }
+        },
+        "Contents": {
+            "allow_none": true
+        }
     }
 }
