--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
                 {
                     "key": "Cross-Origin-Embedder-Policy",
                     "value": "require-corp"
+                },
+                {
+                    "key": "Content-Security-Policy",
+                    "value": "default-src 'self' https:; script-src 'self' 'unsafe-eval' 'unsafe-inline' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https:; font-src 'self' https: data:; connect-src 'self' https:; frame-ancestors 'none'; object-src 'none';"
                 }
             ]
         }
