feat: platinum features - interactive demo, branded splash, and widget support

--- a/jupyter_lite_config.json
+++ b/jupyter_lite_config.json
@@ -7,12 +7,15 @@
                     "pandas",
                     "matplotlib",
                     "numpy",
-                    "scipy"
+                    "scipy",
+                    "ipywidgets",
+                    "ipyleaflet"
                 ]
             }
         },
         "Contents": {
             "allow_none": true
-        }
+        },
+        "storage_name": "Ebsen Research Lab"
     }
 }
