feat: add openpyxl support and prepare data directory

--- a/jupyter_lite_config.json
+++ b/jupyter_lite_config.json
@@ -9,7 +9,8 @@
                     "numpy",
                     "scipy",
                     "ipywidgets",
-                    "ipyleaflet"
+                    "ipyleaflet",
+                    "openpyxl"
                 ]
             }
         },
