fix: correct JupyterLite config apps trait schema

--- a/jupyter_lite_config.json
+++ b/jupyter_lite_config.json
@@ -1,19 +1,9 @@
 {
     "LiteBuildConfig": {
         "base_url": "/",
-        "apps": {
-            "lab": {
-                "pre_install": [
-                    "pandas",
-                    "matplotlib",
-                    "numpy",
-                    "scipy",
-                    "ipywidgets",
-                    "ipyleaflet",
-                    "openpyxl"
-                ]
-            }
-        },
+        "apps": [
+            "lab"
+        ],
         "Contents": {
             "allow_none": true
         },
