feat: bundle dependencies in jupyterlite wheelhouse via PipliteAddon

--- a/jupyter_lite_config.json
+++ b/jupyter_lite_config.json
@@ -4,6 +4,11 @@
         "apps": [
             "lab"
         ],
+        "PipliteAddon": {
+            "requirements": [
+                "requirements.txt"
+            ]
+        },
         "Contents": {
             "allow_none": true
         },
