--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
           jupyter lite build --contents content --output-dir dist --piplite-wheels requirements.txt
       - name: Test notebooks
         run: |
-          pytest --nbval content/*.ipynb
+          pytest --nbval-lax content/*.ipynb
       - name: Inject PWA & Theme Metadata
         run: |
           cp manifest.json dist/
